styles.css
/*                      */
/* Standard CSS Classes */
/*                      */
body, html {
  height: 100%;
  width: 100%;
  margin: 0;
  overflow-x: hidden;
  opacity: 1;
  transition: 1s opacity;
}

hr {
  width: 72%;
  opacity: .6;
  color: white;
  background-color: white;
  height: 1px;
  outline: none;
  padding: none;
  border: none;
}

a {
  text-decoration: none;
}

/*                     */
/* Navigation Menu     */
/*                     */
.nav-menu-wrapper {
  position: absolute;
  top: 1.5%;
  left: 96%;
  overflow: auto;
}

.nav-menu-icon {
  height: 25px;
  width: 30px;
  opacity: 1;
}

.nav-menu-icon:hover {
  opacity: .75;
}

.nav-menu-icon:focus {
  outline: none;
}

.bar-item-close {
  height: 18px;
  width: 18px;
  opacity: .75;
  background-color: #54a3b1;
  outline: none;
  color: white;
  font-size: 20px;
  float: right;
  border: 0px;
  margin: 8px;
}

.bar-item-close:hover {
  opacity: 1;
}

.nav-bio-text-wrapper {
  text-align: left;
  color: #e6e6e6;
  font-size: 13px;
  font-family: 'Lato', sans-serif;
  max-width: 25em;
  margin: 35px;
}

.nav-account-links-wrapper {
  margin: 35px;
}

.nav-account-link-icon {
  height: 25px;
  width: 25px;
  opacity: .75;
  color: none;
  border: 0px;
}

.nav-account-link-icon:hover {
  opacity: 1;
}

.nav-account-link-icon:focus {
  outline: none;
}

.bar-item-active .bar-item-active:before {
  color: white !important;
}

.bar-item-active:before .bar-item-active:hover {
  color: #54a3b1 !important;
  background-color: white !important;
}

/*                     */
/* Footer/Headers      */
/*                     */
.footer-copyright {
  position: absolute;
  bottom: .5%;
  left: .5%;
  font-size: 10px;
  font-weight: lighter;
  color: white;
  opacity: 0.5;
}

.header-logo-wrapper {
  position: absolute;
  top: 1%;
  left: 1%;
  overflow: auto;
}

.header-logo-image {
  height: 40px;
  width: 40px;
}

.full-spin {
  -webkit-animation: spin 2s ease;
  -moz-animation: spin 2s ease;
  animation: spin 2s ease;
}

@-moz-keyframes spin {
  100% {
    -moz-transform: rotate(360deg);
  }
}

@-webkit-keyframes spin {
  100% {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes spin {
  100% {
    -webkit-transform: rotate(360deg);
    transform:rotate(360deg);
  }
}

/*                     */
/* Project Information */
/*                     */
.project-listing-wrapper {
  position: absolute;
  left: 19%;
  top: 20%;
}

.project-icon {
  opacity: .75;
  width: 200px;
  height: 200px;
  display: inline-block;
  margin: 50px;
}

.project-icon:hover {
  opacity: 1;
}

.project-icon-image:focus {
  outline: none;
}

.project-icon-image {
  max-width: 100%;
  max-height: 100%;
  outline-width: 1px;
  border-color: black;
  border-radius: 16px;
}

.project-info-wrapper {
  position: absolute;
  text-align: center;
  top: 65%;
}

/*                     */
/* Landing Page Text   */
/*                     */
.bio-text-wrapper {
  position: absolute;
  text-align: center;
  top: 38%;
  left: 27%;
  color: white;
  font-size: 28px;
  font-family: 'Lato', sans-serif;
  max-width: 25em;
}

/*                     */
/* My Work Page Images */
/*                     */
.background-image-page {
  background-image: url("Assets/page-background.png");
  height: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.section-separator {
  position: absolute;
  top: 4%;
}

.section-separator-white-line {
  height: 2px;
  width: 100%;
  opacity: .35;
}

/*                     */
/* Landing Page Images */
/*                     */
.background-image {
  background-image: url("Assets/landing-page.png");
  height: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
.cloud-image-wrapper {
  position: relative;
  left: 10%;
  top: 10%;
}

.cloud-image {
  height: 8%;
  width: 8%;
}

.cloud-image-cluster {
  height: 50%;
  width: 50%;
}

.cloud-image-big {
  height: 20%;
  width: 20%;
}

/*                      */
/* Landing Page Buttons */
/*                      */
.landing-button-wrapper {
  text-align: center;
}

.landing-button {
  position: absolute;
  top: 50%;
  left: 42.5%;
  /* Safari Support */
  -webkit-transition-duration: 0.5s;
  /* Chrome Support */
  transition-duration: 0.5s;
  background-color: white;
  border: none;
  border-radius: 32px;
  color: #58a6b6;
  padding: 15px 70px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  font-family: 'Lato', sans-serif;
}

.landing-button:hover {
  background-color: #58a6b6;
  color: white;
}

.landing-button:focus {
  outline: none;
}

/*                      */
/* W3.CSS Stylesheet    */
/*                      */

/* W3.CSS 4.06 November 2017 by Jan Egil and Borge Refsnes */
html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
/* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
article,aside,details,figcaption,figure,footer,header,main,menu,nav,section,summary{display:block}
audio,canvas,progress,video{display:inline-block}progress{vertical-align:baseline}
audio:not([controls]){display:none;height:0}[hidden],template{display:none}
a{background-color:transparent;-webkit-text-decoration-skip:objects}
a:active,a:hover{outline-width:0}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}
dfn{font-style:italic}mark{background:#ff0;color:#000}
small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}
sub{bottom:-0.25em}sup{top:-0.5em}figure{margin:1em 40px}img{border-style:none}svg:not(:root){overflow:hidden}
code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}
button,input,select,textarea{font:inherit;margin:0}optgroup{font-weight:bold}
button,input{overflow:visible}button,select{text-transform:none}
/* ... */

